# PQC-X509-ASSURANCE

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.json
corpus/: README.md  manifest.example.jsonl  manifest.jsonl
docs/: appendix-selection-rationale.md  cross-tool-behavior.md  operator-playbook.md  real-world-appendix-ledger.md  reference-workflow.md
experiments/: README.md  build_libcrux_import_check.sh  check_environment.sh  extract_real_world_appendix.sh  generate_corpus_openssl.sh  generate_der_mutations.sh  generate_mutations_openssl.sh  openssl_exts.cnf  prepare_third_party.sh  replay_freeze.sh  run_baseline.sh  run_baseline_compare.sh  run_coverage.sh  run_cross_tool_behavior.sh  run_extended.sh  run_operator_gate_packs.sh  run_private_key_coverage.sh  run_real_world_appendix.sh  run_reference_workflow.sh  run_smoke_tests.sh
reference/: README.md
results/: baseline_jzlint_certificate_results.jsonl  baseline_vs_extended_certificate_comparison.csv  baseline_vs_extended_certificate_report.json  certificate_spki_coverage.csv  certificate_spki_coverage.json  certificate_spki_coverage_deployable.csv  certificate_spki_coverage_deployable.json  cross_tool_behavior_matrix.csv  cross_tool_behavior_matrix.json  extended_certificate_eval.jsonl  extended_lint_results.jsonl  extended_lint_results_deployable.jsonl  extended_registry_summary.json  extended_registry_summary_deployable.json  operator_gate_matrix.csv  operator_gate_matrix.json  operator_readiness_summary.json  policy_summary_deployable.json  policy_summary_strict.json  (+5 more)
(+117 files in other folders)
